attempting to fix twitter timeline widget width on iphone with CSS

--- a/public/css/style.css
+++ b/public/css/style.css
@@ -479,3 +479,6 @@ color: #8e8d8d;
 	background-color: #fb3c47;
 	color: #ffffff;
 }
+.twitter-timeline {
+    width: 100vw !important;
+}
